tests/samples/negative/types/reference_return_if_local.ax
module reference_return_if_local;

fn bad(flag: bool) -> &i32 {
    let left: i32 = 1;
    let right: i32 = 2;
    return if flag { &left } else { &right };
}

fn main() -> i32 {
    return 0;
}
